# template-workflow-invoice-extraction

./: .env.template  README.md  pyproject.toml
src/invoice_extraction/: workflow.py
tests/: conftest.py  test_workflow.py
